refactor BROWSE_OBJECT/BROWSE_FOLDER to BROWSE permission